fix css bleed into assetic.net

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -49,14 +49,14 @@ body {
 
 /*Checkbox*/
 
-input[type="checkbox"] {
+.jsgrid-cell>input[type="checkbox"] {
     position: relative;
     top: -0.375rem;
     margin: 0 1rem 0 0;
     cursor: pointer;
 }
 
-input[type="checkbox"]:before {
+.jsgrid-cell>input[type="checkbox"]:before {
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
@@ -69,7 +69,7 @@ input[type="checkbox"]:before {
     border: 2px solid #607d8b;
 }
 
-input[type="checkbox"]:checked:before {
+.jsgrid-cell>input[type="checkbox"]:checked:before {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -ms-transform: rotate(-45deg);
@@ -81,7 +81,7 @@ input[type="checkbox"]:checked:before {
     border-right-style: none;
 }
 
-input[type="checkbox"]:indeterminate:before {
+.jsgrid-cell>input[type="checkbox"]:indeterminate:before {
     top: 0.5rem;
     height: 0;
     border-color: #03A9F4;
@@ -89,7 +89,7 @@ input[type="checkbox"]:indeterminate:before {
     border-right-style: none;
 }
 
-input[type="checkbox"]:after {
+.jsgrid-cell>input[type="checkbox"]:after {
     content: "";
     position: absolute;
     top: -0.125rem;
